crates/service/tests/diagnostics/snapshots/features__diagnostics__mem_type__invalid_page_size.snap
---
source: crates/service/tests/diagnostics/mem_type.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 24
        },
        "end": {
          "line": 2,
          "character": 25
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "memory page size must be 1 or 65536"
    }
  ]
}
