crates/service/tests/diagnostics/snapshots/features__diagnostics__mem_type__overflow.snap
---
source: crates/service/tests/diagnostics/mem_type.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 10
        },
        "end": {
          "line": 3,
          "character": 33
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "memory size can't be greater than 4294967295"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 34
        },
        "end": {
          "line": 3,
          "character": 57
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "memory size can't be greater than 4294967295"
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 25
        },
        "end": {
          "line": 4,
          "character": 48
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "memory size can't be greater than 18446744073709551615"
    }
  ]
}
