crates/service/tests/diagnostics/snapshots/features__diagnostics__mem_type__overflow_and_less_than.snap
---
source: crates/service/tests/diagnostics/mem_type.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 10
        },
        "end": {
          "line": 2,
          "character": 17
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "value can't be greater than 65536"
    },
    {
      "range": {
        "start": {
          "line": 2,
          "character": 18
        },
        "end": {
          "line": 2,
          "character": 25
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "value can't be greater than 65536"
    },
    {
      "range": {
        "start": {
          "line": 2,
          "character": 18
        },
        "end": {
          "line": 2,
          "character": 25
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "max value must be greater than min value"
    }
  ]
}
