crates/service/tests/diagnostics/snapshots/features__diagnostics__mem_type__page_size_65536.snap
---
source: crates/service/tests/diagnostics/mem_type.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 39
        },
        "end": {
          "line": 2,
          "character": 62
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "memory size can't be greater than 281474976710656"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 10
        },
        "end": {
          "line": 3,
          "character": 16
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "memory size can't be greater than 65536"
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 17
        },
        "end": {
          "line": 3,
          "character": 23
        }
      },
      "severity": 1,
      "code": "mem-type",
      "source": "wat",
      "message": "memory size can't be greater than 65536"
    }
  ]
}
